--- a/my code/admin_signin.html
+++ b/my code/admin_signin.html
@@ -4,32 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/admin_signin.css">
     <title>Admin</title>
 </head>
-<style>
-    #container{
-        display: flex;
-        flex-flow: column;
-        width: 60%;
-        margin-left: 40%;
-        margin-top: 10%;
-    }
-    input{
-        width: 30%;
-    }
-    #email{
-        margin-bottom: 1%;
-    }
-    #login{
-        width: 31%;
-        margin-top: 2%;
-        padding: 1%;
-        border-radius: 7px;
-        background-color: rgb(114, 49, 166);
-        color: wheat;
-    }
-</style>
+
 <body>
+    <div id="logo">
+        <img src="https://i.ibb.co/KGHF5hJ/IMG-20221109-095901.png" alt="">
+        <h1>Pacifico Admin Login</h1>
+    </div>
     <div id="container">    
         
         <h1>Welcome back!</h1>
@@ -41,4 +24,4 @@
     </div>
 </body>
 </html>
-<script src="./admin_signin.js"></script>
+<script src="./scripts/admin_signin.js"></script>
