--- a/my code/admin.html
+++ b/my code/admin.html
@@ -4,33 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/admin.css">
     <title>admin-panel</title>
 </head>
-<style>
-    body{
-        display: flex;
-    }
-    #dashboard{
-        flex:3;
-    }
-    #display{
-        flex: 7;
-    }
-   
-</style>
+
 <body>
     <div id="dashboard">
-        <h4>Pacifico Store</h4>
+        <div id="logo">
+            <img src="https://i.ibb.co/KGHF5hJ/IMG-20221109-095901.png" alt="">
+            <h1>Pacifico Admin</h1>
+        </div>
         <div id="elements">
-            <h5 id="order">Orders</h5>
-            <h5 id="product_list">Product List</h5>
-            <h5 id="add_product">Add Products</h5>
-            <h5 id="customer">Customers</h5>
+            <h3 id="order">Orders</h3>
+            <h3 id="product_list">Product List</h3>
+            <h3 id="add_product">Add Products</h3>
+            <h3 id="customer">Customers</h3>
         </div>
     </div>
     <div id="display">
         <div id="order_div">
-            <table>
+            <table class="table_content">
                 <thead>
                     <tr>
                         <th>Order</th>
@@ -39,7 +32,7 @@
                     </tr>
                 </thead>
                 <tbody id="order_body">
-                    <tr>
+                    <!-- <tr>
                         <td>#1</td>
                         <td>Lebron</td>
                         <td>200$</td>
@@ -48,12 +41,12 @@
                         <td>#2</td>
                         <td>James</td>
                         <td>150$</td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table>
         </div>
         <div id="product_list_div">
-            <table>
+            <table class="table_content">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -63,7 +56,7 @@
                     </tr>
                 </thead>
                 <tbody id="product_list_body">
-                    <tr>
+                    <!-- <tr>
                         <td>Nike T-Shirt</td>
                         <td>T-Shirt</td>
                         <td>Published</td>
@@ -80,19 +73,20 @@
                         <td>Winter Wear</td>
                         <td>Published</td>
                         <td>65</td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table>
         </div>
         <div id="add_product_div">
-            <input type="text" placeholder="Name">
-            <input type="text" placeholder="Type">
-            <input type="text" placeholder="Price">
-            <input type="text" placeholder="Stock">
-            <button>Add Product</button>
+            <!-- <input type="text" id="p_name" placeholder="Name"><br>
+            <input type="text" id="p_type" placeholder="Type"><br>
+            <input type="number" id="p_price" placeholder="Price"><br>
+            <input type="number" id="p_stock" placeholder="Stock"><br>
+            <input type="text" id="p_image" placeholder="Image url"><br>
+            <button id="p_add">Add Product</button> -->
         </div>
         <div id="customers_div">
-            <table>
+            <table class="table_content">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -100,8 +94,8 @@
                         <th>Number of Orders</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
+                <tbody id="customer_body">
+                    <!-- <tr>
                         <td>Lebron</td>
                         <td>lebron@pacifico.com</td>
                         <td>2</td>
@@ -110,11 +104,13 @@
                         <td>Lewis</td>
                         <td>lewis@amg.com</td>
                         <td>4</td>
-                    </tr>
+                    </tr> -->
                 </tbody>
             </table>
         </div>
     </div>
+
+    <button id="user_btn">Go to User-Panel</button>
 </body>
 </html>
-<script src="./admin.js"></script>
+<script type="module" src="./scripts/admin.js"></script>
