product-file-updated

--- a/product.html
+++ b/product.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product</title>
-    <link rel="stylesheet" href=".\styles\product.css">
-</head>
-<body>
-    <div id="images">
-
-    </div>
-    <div id="data">
+    <link rel="stylesheet" href=".\styles\product.css" />
+  </head>
+  <body>
+    <div id="product_data">
+      <div id="images">
+        <!-- images here -->
+        honne jo
+      </div>
+      <div id="data">
         <div id="p_name">
-            
+
         </div>
+        <div id="size">
+            <span>Select Size</span>
+            <span>Size chart</span>
+        </div>
+        <div id="sizes"></div>
+        <div id="bag"></div>
+      </div>
     </div>
-</body>
-<script src=".\sources\product.js"></script>
+  </body>
+  <script src=".\sources\product.js"></script>
 </html>
