--- a/index.html
+++ b/index.html
@@ -5,7 +5,91 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="styles/navbar.css" />
+    <link rel="stylesheet" href="./styles/slider.css" />
+    <link rel="stylesheet" href="./styles/category.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
   </head>
-  <body></body>
-  <script src="/script/index.js" type="module"></script>
+  <body>
+    <div id="header"></div>
+    <div class="slideshow-container">
+      <div class="mySlides fade">
+        <!-- <div class="numbertext">1 / 5</div> -->
+        <img
+          src="https://assets.myntassets.com/w_980,c_limit,fl_progressive,dpr_2.0/assets/images/2022/5/3/b54399f0-6ed5-44b3-84b0-e9d5c1657aaa1651599573991-CR7_Desk_Baner.jpg"
+          style="width: 100%"
+        />
+        <!-- <div class="text">Caption Text</div> -->
+      </div>
+      <div class="mySlides fade">
+        <div style="text-align: center">
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
+
+        <!-- <div class="numbertext">2 / 5</div> -->
+        <img
+          src="https://assets.myntassets.com/w_980,c_limit,fl_progressive,dpr_2.0/assets/images/2022/4/10/5f930503-ecb2-489a-9ab8-5081e10a15681649581894257-Staycation-Essentials_DEsk.jpg"
+          style="width: 100%"
+        />
+        <!-- <div class="text">Caption Two</div> -->
+      </div>
+
+      <div class="mySlides fade">
+        <!-- <div class="numbertext">3 / 5</div> -->
+        <img
+          src="https://assets.myntassets.com/w_980,c_limit,fl_progressive,dpr_2.0/assets/images/2022/4/17/744f6742-7705-45a9-b555-892c309b36cd1650181498588-Premium-Collection_Desk.jpg"
+          style="width: 100%"
+        />
+        <!-- <div class="text">Caption Three</div> -->
+      </div>
+      <div class="mySlides fade">
+        <!-- <div class="numbertext">3 / 5</div> -->
+        <img
+          src="https://assets.myntassets.com/w_980,c_limit,fl_progressive,dpr_2.0/assets/images/2022/4/17/abd2b07f-954c-43ad-ba39-bfa50527d0641650180659364-Backpacks---Luggage_Desk.jpg"
+          style="width: 100%"
+        />
+        <!-- <div class="text">Caption Three</div> -->
+      </div>
+
+      <div class="mySlides fade">
+        <!-- <div class="numbertext">3 / 5</div> -->
+        <img
+          src="https://assets.myntassets.com/w_980,c_limit,fl_progressive,dpr_2.0/assets/images/2022/5/3/a20271c6-249f-480b-bcc7-1b150516e54e1651599573998-Dressberry_Desk.jpg"
+          style="width: 100%"
+        />
+        <!-- <div class="text">Caption Three</div> -->
+      </div>
+
+      <div class="mySlides fade">
+        <!-- <div class="numbertext">4 / 5</div> -->
+        <img
+          src="https://assets.myntassets.com/w_980,c_limit,fl_progressive,dpr_2.0/assets/images/2022/4/12/09f0df54-6f8f-4bb0-a4b9-3b374d4538561649782019495-Top-Brands-2_Desk_Banner.jpg"
+          style="width: 100%"
+        />
+        <!-- <div class="text">Caption Three</div> -->
+      </div>
+    </div>
+    <div id="prod-container">
+      <h1>DEAL OF THE DAY</h1>
+      <div id="cat-1"></div>
+      <h1>BEST OF MYNTRA EXCLUSIVE BRANDS</h1>
+      <div id="cat-2"></div>
+      <h1>TOP PICKS</h1>
+      <div id="cat-3"></div>
+      <h1>CATEGORIES TO BAG</h1>
+      <div id="cat-4"></div>
+    </div>
+    <br />
+  </body>
+  <script src="./script/slider.js"></script>
+  <script type="module" src="./script/navbarMain.js"></script>
+  <script src="./script/category.js"></script>
 </html>
