product page addded

--- a/product.html
+++ b/product.html
@@ -11,18 +11,26 @@
     <div id="product_data">
       <div id="images">
         <!-- images here -->
-        honne jo
       </div>
       <div id="data">
-        <div id="p_name">
+        <div id="p_detail"></div>
 
-        </div>
-        <div id="size">
-            <span>Select Size</span>
-            <span>Size chart</span>
-        </div>
         <div id="sizes"></div>
-        <div id="bag"></div>
+        <select>
+          <option value="">Select size</option>
+          <option value="xs">XS</option>
+          <option value="S">S</option>
+          <option value="M">M</option>
+          <option value="M">L</option>
+          <option value="M">XL</option>
+          <option value="M">XXL</option>
+          <option value="M">3XL</option>
+        </select>
+
+        <div id="bag">
+          <button>Add to Cart</button>
+          <button>Add to wishlist</button>
+        </div>
       </div>
     </div>
   </body>
