admin css work is in progress

--- a/my code/admin.html
+++ b/my code/admin.html
@@ -110,41 +110,7 @@
             <span>Customer</span>
           </div>
           <div id="add_product">
-            <span>
-              <svg
-                version="1.1"
-                id="Capa_1"
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                x="0px"
-                y="0px"
-                viewBox="0 0 45.711 45.711"
-                style="enable-background: new 0 0 45.711 45.711"
-                xml:space="preserve"
-              >
-                <path
-                  d="M44.211,0H1.5C0.671,0,0,0.672,0,1.5v42.711c0,0.828,0.671,1.5,1.5,1.5h42.711c0.829,0,1.5-0.672,1.5-1.5V1.5
-	C45.711,0.672,45.04,0,44.211,0z M42.711,42.711H3V3h39.711V42.711z M5.154,22.856c0-2.209,1.791-4,4-4h9.702V9.153
-	c0-2.209,1.791-4,4-4s4,1.791,4,4v9.702h9.702c2.209,0,4,1.791,4,4c0,2.209-1.791,4-4,4h-9.702v9.702c0,2.209-1.791,4-4,4
-	s-4-1.791-4-4v-9.702H9.154C6.945,26.856,5.154,25.064,5.154,22.856z"
-                />
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-                <g></g>
-              </svg>
-            </span>
+            <span>+</span>
             <span>Add Product</span>
           </div>
           <div id="discount">
