product_category_updated

--- a/product.html
+++ b/product.html
@@ -16,20 +16,20 @@
         <div id="p_detail"></div>
 
         <div id="sizes"></div>
-        <select>
-          <option value="">Select size</option>
-          <option value="xs">XS</option>
+        <select id="size">
+          <option value=null>Select size</option>
+          <option value="XS">XS</option>
           <option value="S">S</option>
           <option value="M">M</option>
-          <option value="M">L</option>
-          <option value="M">XL</option>
-          <option value="M">XXL</option>
-          <option value="M">3XL</option>
+          <option value="L">L</option>
+          <option value="XL">XL</option>
+          <option value="XXL">XXL</option>
+          <option value="3XL">3XL</option>
         </select>
 
         <div id="bag">
-          <button>Add to Cart</button>
-          <button>Add to wishlist</button>
+          <button id="cart">Add to Cart</button>
+          <button id="wishlist">Add to wishlist</button>
         </div>
       </div>
     </div>
