admin and orders database wishlist and cart

--- a/my code/admin.html
+++ b/my code/admin.html
@@ -28,7 +28,7 @@
         </div>
 
         <div id="section">
-          <div id="order">
+          <div id="orders">
             <span>
               <svg
                 width="18"
@@ -55,7 +55,7 @@
             </span>
             <span>Orders</span>
           </div>
-          <div id="product_list">
+          <div id="product_lists">
             <span>
               <svg
                 width="18"
@@ -82,7 +82,7 @@
             </span>
             <span>Products</span>
           </div>
-          <div id="customer">
+          <div id="customers">
             <span>
               <svg
                 width="18"
@@ -109,11 +109,11 @@
             </span>
             <span>Customer</span>
           </div>
-          <div id="add_product">
+          <div id="add_products">
             <span>+</span>
             <span>Add Product</span>
           </div>
-          <div id="discount">
+          <div id="discounts">
             <span>
               <svg
                 width="18"
@@ -203,7 +203,7 @@
             </span>
             <span>Gift Cards</span>
           </div>
-          <div id="pricing">
+          <div id="pricings">
             <span>
               <svg
                 width="18"
