chage the file name from category.js to mainSection.js

--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
   </body>
   <script src="./script/slider.js"></script>
   <script type="module" src="./script/navbarMain.js"></script>
-  <script src="./script/category.js"></script>
+  <script src="./script/mainSection.js"></script>
   <script type="module" src="./script/footerMain.js"></script>
 </html>
