file name change from category.css to mainSection.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/navbar.css" />
     <link rel="stylesheet" href="./styles/slider.css" />
-    <link rel="stylesheet" href="./styles/category.css" />
+    <link rel="stylesheet" href="./styles/mainSection.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
     <link
       rel="stylesheet"
