added navbar in category page also and solve some buggs isuue

--- a/product.html
+++ b/product.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product</title>
     <link rel="stylesheet" href=".\styles\product.css" />
+    <link rel="stylesheet" href="./styles/loader.css" />
   </head>
   <body>
     <div id="product_data">
@@ -17,7 +18,7 @@
 
         <div id="sizes"></div>
         <select id="size">
-          <option value=null>Select size</option>
+          <option value="null">Select size</option>
           <option value="XS">XS</option>
           <option value="S">S</option>
           <option value="M">M</option>
@@ -32,6 +33,9 @@
           <button id="wishlist">Add to wishlist</button>
         </div>
       </div>
+    </div>
+    <div id="loder">
+      <div id="spin"></div>
     </div>
   </body>
   <script src=".\sources\product.js"></script>
