--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/slider.css" />
     <link rel="stylesheet" href="./styles/mainSection.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
+    <link rel="stylesheet" href="./styles/loader.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -90,6 +91,9 @@
     </div>
     <br />
     <div id="bottom"></div>
+    <div id="loder">
+      <div id="spin"></div>
+    </div>
   </body>
   <script src="./script/slider.js"></script>
   <script type="module" src="./script/navbarMain.js"></script>
