--- a/payment.html
+++ b/payment.html
@@ -11,17 +11,17 @@
       <div class="container">
         <div class="left">
           <h3>BILLING ADDRESS</h3>
-          <form>
+          <form id="form">
             Full name
-            <input type="text" name="" placeholder="Enter name" />
+            <input type="text" name="" placeholder="Enter name" required />
             Email
-            <input type="text" name="" placeholder="Enter email" />
+            <input type="text" name="" placeholder="Enter email" required/>
 
             Address
-            <input type="text" name="" placeholder="Enter address" />
+            <input type="text" name="" placeholder="Enter address" required/>
 
             City
-            <input type="text" name="" placeholder="Enter City" />
+            <input type="text" name="" placeholder="Enter City" required/>
             <div id="zip">
               <label>
                 State
@@ -37,7 +37,7 @@
               </label>
               <label>
                 Zip code
-                <input type="number" name="" placeholder="Zip code" />
+                <input type="number" name="" placeholder="Zip code" required/>
               </label>
             </div>
           </form>
@@ -51,10 +51,10 @@
             <br /><br />
 
             Credit card number
-            <input type="text" name="" placeholder="Enter card number" />
+            <input type="text" name="" placeholder="Enter card number" required />
 
             Exp month
-            <input type="text" name="" placeholder="Enter Month" />
+            <input type="text" name="" placeholder="Enter Month" required/>
             <div id="zip">
               <label>
                 Exp year
@@ -68,13 +68,19 @@
               </label>
               <label>
                 CVV
-                <input type="number" name="" placeholder="CVV" />
+                <input type="number" name="" placeholder="CVV" required/>
               </label>
             </div>
           </form>
-          <input type="submit" name="" value="Proceed to Checkout" />
+          <input
+            type="submit"
+            name=""
+            value="Proceed to Checkout"
+            onclick="endfunct()"
+          />
         </div>
       </div>
     </header>
   </body>
 </html>
+<script src="/script/payment.js"></script>
