--- a/prod.html
+++ b/prod.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./styles/navbar.css" />
   </head>
   <body>
     hello
   </body>
+  <!-- <script type="module" src="./script/navbarMain.js"></script> -->
 </html>
