--- a/product.html
+++ b/product.html
@@ -7,8 +7,14 @@
     <title>Product</title>
     <link rel="stylesheet" href=".\styles\product.css" />
     <link rel="stylesheet" href="./styles/loader.css" />
+    <link rel="stylesheet" href="./styles/navbar.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
   </head>
   <body>
+    <div id="header"></div>
     <div id="product_data">
       <div id="images">
         <!-- images here -->
@@ -18,7 +24,7 @@
 
         <div id="sizes"></div>
         <select id="size">
-          <option value="null">Select size</option>
+          <option value="null">Size</option>
           <option value="XS">XS</option>
           <option value="S">S</option>
           <option value="M">M</option>
@@ -39,4 +45,5 @@
     </div>
   </body>
   <script src=".\sources\product.js"></script>
+  <script type="module" src="./script/navbarMain.js"></script>
 </html>
