maybe last commit

--- a/cart.html
+++ b/cart.html
@@ -19,11 +19,7 @@
   <body>
     <div id="upperbar">
       <div>
-        <img
-          src="../Common Files/image/myntra-removebg-preview.png"
-          alt="brandLogo"
-          id="landingPage"
-        />
+        <img src="./image/Pacifico.png" alt="brandLogo" id="landingPage" />
       </div>
       <div>
         <p><span id="first">BAG </span> --------- <span>PAYMENT</span></p>
@@ -33,12 +29,12 @@
           src="https://constant.myntassets.com/checkout/assets/img/sprite-secure.png"
           alt=""
         />
-        <span>100% SECURE</span>
+        <!-- <span>100% SECURE</span> -->
       </div>
     </div>
 
     <div id="timerbox">
-      <p>Sale Starts in <span> 3 </span> Days</p>
+      <!-- <p>Sale Starts in <span> 3 </span> Days</p> -->
     </div>
     <div class="con_ord">
       <div class="container"></div>
@@ -57,7 +53,7 @@
         </div>
         <p>Enter Promo Code</p>
         <div class="promocode">
-          <input type="text" id="promo" placeholder="MYNTRA300" />
+          <input type="text" id="promo" />
           <div class="apply">Apply</div>
         </div>
 
@@ -65,10 +61,10 @@
       </div>
     </div>
 
-    <div class="wishlistlink">
+    <!-- <div class="wishlistlink">
       <i class="fa-duotone fa-cart-flatbed"></i>
       <p>Add More From Wishlist</p>
-    </div>
+    </div> -->
   </body>
 </html>
 <script src="/script/cart.js"></script>
