little bit css in admin page

--- a/my code/admin.html
+++ b/my code/admin.html
@@ -28,7 +28,7 @@
         </div>
 
         <div id="section">
-          <div id="orders">
+          <div id="order">
             <span>
               <svg
                 width="18"
@@ -55,7 +55,7 @@
             </span>
             <span>Orders</span>
           </div>
-          <div id="product_lists">
+          <div id="product_list">
             <span>
               <svg
                 width="18"
@@ -82,7 +82,7 @@
             </span>
             <span>Products</span>
           </div>
-          <div id="customers">
+          <div id="customer">
             <span>
               <svg
                 width="18"
@@ -109,7 +109,7 @@
             </span>
             <span>Customer</span>
           </div>
-          <div id="add_products">
+          <div id="add_product">
             <span>+</span>
             <span>Add Product</span>
           </div>
@@ -326,13 +326,13 @@
       </div>
       <div id="rightBar">
         <div id="dashboard">
-          <div id="logo">
+          <!-- <div id="logo">
             <img
               src="https://i.ibb.co/KGHF5hJ/IMG-20221109-095901.png"
               alt=""
             />
             <h1>Pacifico Admin</h1>
-          </div>
+          </div> -->
           <div id="search_div">
             <input type="search" id="search" placeholder="Search for product" />
           </div>
@@ -342,12 +342,12 @@
             <button id="hl">High - Low</button>
             <button id="gt">Products greater than 2000</button>
           </div>
-          <div id="elements">
-            <h3 id="order">Orders</h3>
+          <!-- <div id="elements">
+            <h3 id="order">Order</h3>
             <h3 id="product_list">Product List</h3>
             <h3 id="add_product">Add Products</h3>
             <h3 id="customer">Customers</h3>
-          </div>
+          </div> -->
         </div>
         <div id="display">
           <div id="order_div">
