changed the structure of files backend and frontend is in different folder

--- a/Frontend/cart.html
+++ b/Frontend/cart.html
@@ -10,7 +10,7 @@
       type="image/png"
       href="../Common Files/image/favicon.png"
     />
-    <link rel="stylesheet" href="/styles/cart.css"" />
+    <link rel="stylesheet" href="./styles/cart.css"" />
     <script
       src="https://kit.fontawesome.com/24c494a6b6.js"
       crossorigin="anonymous"
@@ -19,7 +19,9 @@
   <body>
     <div id="upperbar">
       <div>
-        <img src="./image/Pacifico.png" alt="brandLogo" id="landingPage" />
+        <a href="./index.html">
+          <img src="./image/Pacifico.png" alt="brandLogo" id="landingPage" />
+        </a>
       </div>
       <div>
         <p><span id="first">BAG </span> --------- <span>PAYMENT</span></p>
@@ -67,4 +69,4 @@
     </div> -->
   </body>
 </html>
-<script src="/script/cart.js"></script>
+<script src="./script/cart.js"></script>
