--- a/Frontend/end.html
+++ b/Frontend/end.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirm Payment</title>
     <link rel="shortcut icon" type="image/png" href="../Common Files/image/favicon.png">
-    <link rel="stylesheet" href="/styles/end.css">
+    <link rel="stylesheet" href="./styles/end.css">
     
 </head>
 
