--- a/Frontend/payment.html
+++ b/Frontend/payment.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Responsive Payment getway form design in Hindi</title>
-    <link rel="stylesheet" type="text/css" href="/styles/payment.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/payment.css" />
   </head>
   <body>
     <header>
@@ -15,13 +15,13 @@
             Full name
             <input type="text" name="" placeholder="Enter name" required />
             Email
-            <input type="text" name="" placeholder="Enter email" required/>
+            <input type="text" name="" placeholder="Enter email" required />
 
             Address
-            <input type="text" name="" placeholder="Enter address" required/>
+            <input type="text" name="" placeholder="Enter address" required />
 
             City
-            <input type="text" name="" placeholder="Enter City" required/>
+            <input type="text" name="" placeholder="Enter City" required />
             <div id="zip">
               <label>
                 State
@@ -37,7 +37,7 @@
               </label>
               <label>
                 Zip code
-                <input type="number" name="" placeholder="Zip code" required/>
+                <input type="number" name="" placeholder="Zip code" required />
               </label>
             </div>
           </form>
@@ -51,10 +51,15 @@
             <br /><br />
 
             Credit card number
-            <input type="text" name="" placeholder="Enter card number" required />
+            <input
+              type="text"
+              name=""
+              placeholder="Enter card number"
+              required
+            />
 
             Exp month
-            <input type="text" name="" placeholder="Enter Month" required/>
+            <input type="text" name="" placeholder="Enter Month" required />
             <div id="zip">
               <label>
                 Exp year
@@ -68,7 +73,7 @@
               </label>
               <label>
                 CVV
-                <input type="number" name="" placeholder="CVV" required/>
+                <input type="number" name="" placeholder="CVV" required />
               </label>
             </div>
           </form>
@@ -83,4 +88,4 @@
     </header>
   </body>
 </html>
-<script src="/script/payment.js"></script>
+<script src="./script/payment.js"></script>
