--- a/Frontend/signup.html
+++ b/Frontend/signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SignUp Page</title>
-    <link rel="stylesheet" href="/styles/signup.css" />
+    <link rel="stylesheet" href="./styles/signup.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -50,7 +50,12 @@
         <a href="">Terms of service</a> and acnowledge the
         <a href="">Privacy policy</a>
       </p>
-      <input type="submit" class="button-36" placeholder="signup" />
+      <input
+        type="submit"
+        class="button-36"
+        placeholder="signup"
+        value="SignUp"
+      />
       <p>Alredy have and account ? <a href="signin.html">sign in</a></p>
     </form>
     <div id="loder">
