--- a/Frontend/signin.html
+++ b/Frontend/signin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>signin Page</title>
-    <link rel="stylesheet" href="/styles/signin.css" />
+    <link rel="stylesheet" href="./styles/signin.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -51,5 +51,5 @@
     </div>
   </body>
 </html>
-<script src="/script/auth.js"></script>
+<script src="./script/auth.js"></script>
 <!-- <script src="./script/signin.js"></script> -->
